# amplifier-bundle-attention-firewall

./: README.md  bundle.md  config.example.yaml  pyproject.toml
agents/: triage-manager.md
behaviors/: attention-firewall.md
config/: default-policy.yaml
context/: awareness.md  delegation-policy.md  instructions.md
src/attention_firewall/: __init__.py  __main__.py  client.py  config.py  daemon.py  focus_assist.py  listener.py  main.py  scheduler.py  startup.py  state.py  toast.py
src/attention_firewall/tools/: __init__.py  ingest.py  notifications_tool.py  notify.py  policies_tool.py  policy.py  summary.py
