[project]
name = "attention-firewall"
version = "0.1.0"
description = "AI-powered Windows notification controller using Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brian Krabach" }
]

dependencies = [
    # Windows notification APIs (Windows-only, optional)
    # These are only needed when running the Windows client
    # "winrt-Windows.UI.Notifications",
    # "winrt-Windows.UI.Notifications.Management",
    # "winrt-Windows.Foundation",
    # "winrt-Windows.Foundation.Collections",
    # "winrt-Windows.ApplicationModel",
    # "winrt-Windows.Data.Xml.Dom",
    
    # Note: amplifier-core/foundation provided by parent package when used as server dependency
    
    # Scheduling
    "apscheduler>=3.10",
    
    # Async support
    "anyio>=4.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # CLI
    "click>=8.0",
    
    # Client mode (connect to amplifier-app-server)
    "httpx>=0.25",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
attention-firewall = "attention_firewall.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/attention_firewall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
