[project]
name = "attention-firewall"
version = "0.1.0"
description = "AI-powered Windows notification controller using Amplifier"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Brian Krabach" }
]

dependencies = [
    # HTTP client for tools
    "httpx>=0.25",
    
    # Scheduling
    "apscheduler>=3.10",
    
    # Async support
    "anyio>=4.0",
    
    # Configuration
    "pyyaml>=6.0",
    
    # CLI
    "click>=8.0",
    
    # Client mode (connect to amplifier-app-server)
    "httpx>=0.25",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
attention-firewall = "attention_firewall.main:main"

[project.entry-points."amplifier.modules"]
tool-notifications = "attention_firewall.tools.notifications_tool:mount"
tool-policies = "attention_firewall.tools.policies_tool:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/attention_firewall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
